Dev_mythip@capgemini.com_17Dec_ForGitSync/src/objects/Review__c.object
<CustomObject>
    <fields>
        <fullName>Cultural_Comments__c</fullName>
        <label>Cultural Comments</label>
        <length>89</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cultural_Fit__c</fullName>
        <label>Cultural Fit</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <label>Experience</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interviewer</label>
        <referenceTo>Interviewer__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Application__c</fullName>
        <label>Job Application</label>
        <referenceTo>Job_Application__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Leadership_Skills__c</fullName>
        <label>Leadership Skills</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Score__c</fullName>
        <formula>(  Cultural_Fit__c  +  Experience__c  +  Leadership_Skills__c  + IF( Recommend_for_Hire__c  ,5,1) )  / 4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_Recommended__c</fullName>
        <label>Reason Recommended</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommend_for_Hire__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recommend for Hire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage_of_Job_App__c</fullName>
        <formula>Job_Application__r.Role__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage of Job App</label>
        <type>Text</type>
    </fields>
    <label>Review</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>REW-{0000}</displayFormat>
        <label>Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Low_cultural_fit_req_explanation</fullName>
        <active>true</active>
        <errorConditionFormula>Cultural_Fit__c  &lt; 2&amp;&amp;LEN( Cultural_Comments__c ) =0</errorConditionFormula>
        <errorDisplayField>Cultural_Comments__c</errorDisplayField>
        <errorMessage>Fill cultural commments</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Recommend_for_hire_req_exp</fullName>
        <active>true</active>
        <errorConditionFormula>Recommend_for_Hire__c  &amp;&amp;  LEN( Reason_Recommended__c ) =0  &amp;&amp;  (  Cultural_Fit__c &lt;=2  ||  Experience__c &lt;=2  ||  Leadership_Skills__c &lt;=2)</errorConditionFormula>
        <errorDisplayField>Reason_Recommended__c</errorDisplayField>
        <errorMessage>Fill reason recommended</errorMessage>
    </validationRules>
</CustomObject>